--- a/FileSystem.vcxproj
+++ b/FileSystem.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="File_stream.h" />
+    <ClInclude Include="Xml_parser.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
