--- a/FileSystem.vcxproj
+++ b/FileSystem.vcxproj
@@ -128,9 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="File_stream.h" />
+    <ClInclude Include="tinyxml2.h" />
+    <ClInclude Include="TinyXml_Test.h" />
     <ClInclude Include="Xml_parser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
